Reformulated radio implementation section.

--- a/Reports/Report/Implementation.tex
+++ b/Reports/Report/Implementation.tex
@@ -72,14 +72,14 @@ The TelosB software is based on the "BlockStorage" and "TestSerial" examples.
 
 \subsection{Radio Communication}\label{sec:Radio-Block}
 
-For transfer of the data, the TelosB radio framework is used. 
+For transfering data between motes, the TelosB radio framework is used. 
 Since the existing TelosB modules are optimized for wireless sensor networks, the standard radio module uses a fixed packet size. 
-This is done since the normal application of a wireless sensor sends a fix size measurement. 
-Furthermore is the packet size relatively small, since a measurement point often generates a small amount of data. 
-For the image transfer application the image data is large and the data size can vary between compressions.
+This is done since the normal application of a wireless sensor is sending a fixed-size measurement. 
+Furthermore the packet size is relatively small, since a single measurement often generates a small amount of data. 
+For the image transfer application the data size is large and it varies with different compression methods.
 
-A series of design steps is therefore taken to fit the very flexible application needed to the more static platform provided. 
-To fit the dynamic message to to the fix size architecture the data split into smaller sizes of maximum 50 bytes. 
+A series of design steps is therefore taken to fit the dynamic data to the more static platform provided. 
+To fit the data to the fixed-size architecture, the data is split into smaller packets of maximum 50 bytes. 
 
 \begin{figure}[H]
 	\centering
@@ -88,12 +88,12 @@ To fit the dynamic message to to the fix size architecture the data split into s
 	\label{fig:RadioPacketCut}
 \end{figure}
 
-Rather than dynamically changing the packet size, to fit the data, the packet size is kept constant at the 50 bytes, and information about how much data is valid in the packet is added. 
+Rather than dynamically changing the packet size to fit the data, the packet size is kept constant at  50 bytes, and information about how much data is valid in the packet is added. 
 Since there sometimes are send a packet with some invalid data, there is introduced some overhead in the radio communication. 
-This can be seen in figure \ref{fig:RadioPacketCut}. 
-This is not desirable for a real wireless sensor network, but since the scope for this project is to measure communication cost vs. computation cost, this will only have an major impact on the measurements, if the difference in size between the compressed and original image is less than 50 bytes, and is therefore tolerable.
+This is illustrated in Figure \ref{fig:RadioPacketCut}. 
+This is not desirable for a real wireless sensor network, but is negligible in our project since the relative amount of invalid data to valid data, is very small. \fxnote{Is this correct?}
 
-When chopping the file in smaller pieces, it is important to be able to reconstruct the image on the receiver side, and detect if a packet is lost. 
+When chopping the file into smaller pieces, it is important to be able to reconstruct the image on the receiver side, and detect if a packet is lost. 
 In order to accomplish this a packet counter that increments for each packet is added to the packet. 
 By looking at this, the system can detect out of order packets, and therefore conclude that a packet is lost. 
 In order to know when all packets are received, the total size is added to the packet.
@@ -108,18 +108,15 @@ When receiving the first packet the receiver then know how much memory it will h
 	\label{fig:PacketSeq}
 \end{figure}
 
-As seen on figure \ref{fig:PacketSeq} we have chosen to create a dedicated receiver and sender module. 
+As seen on Figure \ref{fig:PacketSeq} we have chosen to create a dedicated receiver and sender module. 
 This have been done in order to better separate the energy needed for sending and receiving. 
-On the figure it shows how after the first packet et asks for a buffer to store the whole message in. 
+After the first packet is received, the receiver asks for a buffer to store the whole message in. 
 When a packet is received a message received event is called. 
 This event is also called with a error message in case of a packet is received out of order, and the reception is terminated. 
 
-As shown, there is no acknowledgement or retransmission. 
-For a practical application this features would be a necessary and important to ensure reliability. 
-But in this project predictability is more important than reliability.  
-This is to ensure that packet loss and transmission not add unnecessary energy usage, and deminicis otherwise optimal solutions.  
-
-
+As seen on the figure, there is no acknowledgement or retransmission. 
+For a practical application this features would be necessary and important to ensure reliability.
+In this project predictability is more important than reliability, this is to ensure that packet loss and retransmission does not add unnecessary energy usage which reduces determinism.
 
 
 \subsection{Compression block}
