--- a/Reports/Report/Test_Results.tex
+++ b/Reports/Report/Test_Results.tex
@@ -90,7 +90,7 @@ This section contains the results of the tests done during the mini project.
 	\cline{2-5} 
 	\multicolumn{1}{l}{} 	& \multicolumn{2}{l}{Energy {[$J$]}} & \multicolumn{2}{l}{Mean Power [$W$]} &	&	\\ \hline
 	\rowcolor{gr}
-	\multicolumn{1}{l}{Bit Removed}	& Recive	& Send	& Recive	& Sender	& \multicolumn{1}{l}{Transfer Time [$S$] & \multicolumn{1}{l}{Better Power Than None} \\ \hline
+	\multicolumn{1}{l}{Bit Removed}	& Recive	& Send	& Recive	& Sender	& \multicolumn{1}{l}{Transfer Time [$S$]} & \multicolumn{1}{l}{Better Power Than None} \\ \hline
 	% \rowcolor{gr}
 	\multicolumn{1}{c}{\multirow{3}{*}{None}} & 14,638	& 14,405	& 0,639	& 0,626	& \multicolumn{1}{l}{23,0}	& \multicolumn{1}{l}{0\%}	\\  
 	\multicolumn{1}{c}{}	& 14,666	& 14,432	& 0,639	& 0,626	& \multicolumn{1}{l}{23,0}	& \multicolumn{1}{l}{0\%}	\\ 
