--- a/Reports/Report/Test_Results.tex
+++ b/Reports/Report/Test_Results.tex
@@ -12,12 +12,14 @@ This section contains the description of the tests done as part of the mini proj
 The purpose is to validate the compression and decompression method of each compression algorithm.
 
 \textbf{Test equipment}
+
 \begin{itemize}
 \item PC 
 \item TelosB mote
 \end{itemize}
 
 \textbf{Procedure}
+
 \begin{enumerate}
 \item Connect the TelosB mote to the PC.
 \item Load a compression module on the mote.
@@ -95,7 +97,7 @@ Before the energy measurements are made, the functionality was validated. Using 
 The compressed images can be seen on figure \ref{fig:cameramanresult}. To ensure that the compression-send-decompress procedure was successful it is compared with the same image compressed and decompressed in Matlab. By comparing this two images it is shown that the functionality is as expected. 
 
 
-Looking at the voltage over the shunt, we can see how the system uses power, for the test setup a typical power over time is illustrated in figure \ref{fig:ImageTransfere}
+Looking at the voltage over the shunt, we can see how the system uses power, for the test setup a typical power over time is illustrated in figure \ref{fig:ImageTransfere}.
 
 \begin{figure}[H]
 	\centering
@@ -104,7 +106,8 @@ Looking at the voltage over the shunt, we can see how the system uses power, for
 	\label{fig:ImageTransfere}
 \end{figure}
 
-For each compression algorithm 3 measurements was done on both sender and receiver. The measurements can be seen in the table \ref{tab:MeasurementResults} 
+For each compression algorithm 3 measurements was done on both sender and receiver. 
+The measurements can be seen in the table \ref{tab:MeasurementResults}.
 
 
 \begin{table}[h]
