--- a/Reports/Report/Test_Results.tex
+++ b/Reports/Report/Test_Results.tex
@@ -18,6 +18,7 @@ The purpose is to validate the compression and decompression method of each comp
 \end{itemize}
 
 \textbf{Procedure}
+\vspace{-15pt}
 \begin{enumerate}
 \item Connect the TelosB mote to the PC.
 \item Load a compression module on the mote.
@@ -43,6 +44,7 @@ To ensure that the compression-send-decompress procedure was successful it is co
 By comparing this two images it is shown that the functionality is as expected. 
 
 \textbf{Procedure}
+\vspace{-15pt}
 \begin{enumerate}
 \item Connect the Sender TelosB mote to the PC.
 \item Load the image onto the sender TelosB using the command: \texttt{Java TestSerial -w}.
@@ -69,6 +71,7 @@ The purpose is to validate the energy consumption of the full system functionali
 For each compression algorithm 3 measurements was done on both sender and receiver. The measurements can be seen in the table \ref{tab:MeasurementResults}.
 
 \textbf{Procedure}
+\vspace{-15pt}
 \begin{enumerate}
 \item Choose a compression module on the two TelosB motes.
 \item Connect the Sender TelosB mote to the PC.
