Report ready for review!

--- a/Reports/Report/Conclusion.tex
+++ b/Reports/Report/Conclusion.tex
@@ -9,3 +9,4 @@ When observing the energy measurements result (table \ref{tab:MeasurementResults
 For future projects it would be interesting to implement more computation heavy algorithms like JPEG in order to re-evaluate whether the power usage will be significantly higher.
 
 \section{Conclusion}
+A system with the ability to compress an image and send it between two TelosB motes has been implemented successfully. The energy consumption of the system has been measured using multiple different compression algorithms. Observing the measurement data, it is clear that energy is saved by compressing the image before sending it. 
