--- a/Reports/LatexModules/TextSetup.tex
+++ b/Reports/LatexModules/TextSetup.tex
@@ -11,7 +11,7 @@
 \usepackage{enumerate}
 \usepackage[shortlabels]{enumitem}
 \setlist{noitemsep}
-\setlist{topsep=-10pt}
+\setlist[itemize]{topsep=-10pt}
 
 %-------------------------------------------------------------------
 
