--- a/Reports/Report/Test_Results.tex
+++ b/Reports/Report/Test_Results.tex
@@ -118,27 +118,27 @@ The measurements can be seen in the table \ref{tab:MeasurementResults}.
 	\cline{2-5} 
 	\multicolumn{1}{l}{} 	& \multicolumn{2}{l}{Energy {[$J$]}} & \multicolumn{2}{l}{Mean Power [$W$]} &	&	\\ \hline
 	\rowcolor{gr}
-	\multicolumn{1}{l}{Bit Removed}	& Recive	& Send	& Recive	& Sender	& \multicolumn{1}{l}{Transfer Time [$S$]} & \multicolumn{1}{l}{Better Power Than None} \\ \hline
+	\multicolumn{1}{l}{Bit Removed}	& Sender	& Receiver	& Sender	& Receiver	& \multicolumn{1}{l}{Transfer Time [$S$]} & \multicolumn{1}{l}{Better Power Than None} \\ \hline
 	% \rowcolor{gr}
-	\multicolumn{1}{c}{\multirow{3}{*}{None}} & 14,638	& 14,405	& 0,639	& 0,626	& \multicolumn{1}{l}{23,0}	& \multicolumn{1}{l}{0\%}	\\  
-	\multicolumn{1}{c}{}	& 14,666	& 14,432	& 0,639	& 0,626	& \multicolumn{1}{l}{23,0}	& \multicolumn{1}{l}{0\%}	\\ 
+	\multicolumn{1}{c}{\multirow{3}{*}{None}} & 0,988	& 1,131	& 0,043	& 0,049	& \multicolumn{1}{l}{23,0}	& \multicolumn{1}{l}{0\%}	\\  
+	\multicolumn{1}{c}{}	& 0,990	& 1,133	& 0,043	& 0,049	& \multicolumn{1}{l}{23,0}	& \multicolumn{1}{l}{0\%}	\\ 
 	% \rowcolor{gr} 
-	\multicolumn{1}{c}{}	& 14,609	& 14,385	& 0,639	& 0,626	& \multicolumn{1}{l}{23,0}	& \multicolumn{1}{l}{0\%}	\\ \hline
+	\multicolumn{1}{c}{}	& 0,985	& 1,130	& 0,043	& 0,049	& \multicolumn{1}{l}{23,0}	& \multicolumn{1}{l}{0\%}	\\ \hline
 	% \rowcolor{gr} 
-	\multicolumn{1}{c}{\multirow{3}{*}{One}}  & 13,527	& 13,248	& 0,642	& 0,625	& \multicolumn{1}{l}{21,2}	& \multicolumn{1}{l}{8\%}	\\ %\cline{2-7} 
-	\multicolumn{1}{c}{}	& 13,535	& 13,252	& 0,642	& 0,626	& \multicolumn{1}{l}{21,2}	& \multicolumn{1}{l}{8\%}	\\ %\cline{2-7} 
+	\multicolumn{1}{c}{\multirow{3}{*}{One}}  & 0,879	& 1,047	& 0,042	& 0,049	& \multicolumn{1}{l}{21,2}	& \multicolumn{1}{l}{8\%}	\\ %\cline{2-7} 
+	\multicolumn{1}{c}{}	& 0,879	& 1,047	& 0,042	& 0,049	& \multicolumn{1}{l}{21,2}	& \multicolumn{1}{l}{8\%}	\\ %\cline{2-7} 
 	% \rowcolor{gr} 
-	\multicolumn{1}{c}{}	& 13,528	& 13,254	& 0,642	& 0,625	& \multicolumn{1}{l}{21,2}	& \multicolumn{1}{l}{8\%}	\\ \hline
+	\multicolumn{1}{c}{}	& 0,879	& 1,046	& 0,042	& 0,049	& \multicolumn{1}{l}{21,2}	& \multicolumn{1}{l}{8\%}	\\ \hline
 	% \rowcolor{gr} 
-	\multicolumn{1}{c}{\multirow{3}{*}{Two}}  & 12,469	& 12,189	& 0,643	& 0,625	& \multicolumn{1}{l}{19,5}	& \multicolumn{1}{l}{15\%}	\\ %\cline{2-7} 
-	\multicolumn{1}{c}{}	& 12,477	& 12,206	& 0,643	& 0,626	& \multicolumn{1}{l}{19,5}	& \multicolumn{1}{l}{15\%}	\\ %\cline{2-7} 
+	\multicolumn{1}{c}{\multirow{3}{*}{Two}}  & 0,799	& 0,964	& 0,041	& 0,050	& \multicolumn{1}{l}{19,5}	& \multicolumn{1}{l}{15\%}	\\ %\cline{2-7} 
+	\multicolumn{1}{c}{}	& 0,800	& 0,966	& 0,041	& 0,050	& \multicolumn{1}{l}{19,5}	& \multicolumn{1}{l}{15\%}	\\ %\cline{2-7} 
 	% \rowcolor{gr}
-	\multicolumn{1}{c}{}	& 12,467	& 12,190	& 0,643	& 0,625	& \multicolumn{1}{l}{19,5}	& \multicolumn{1}{l}{15\%}	\\ \hline
+	\multicolumn{1}{c}{}	& 0,800	& 0,965	& 0,041	& 0,050	& \multicolumn{1}{l}{19,5}	& \multicolumn{1}{l}{15\%}	\\ \hline
 	% \rowcolor{gr}
-	\multicolumn{1}{c}{\multirow{3}{*}{Four}} & 9,566	& 9,317	& 0,646	& 0,624	& \multicolumn{1}{l}{14,9}	& \multicolumn{1}{l}{35\%}	\\ %\cline{2-7} 
-	\multicolumn{1}{c}{}	& 9,556	& 9,309	& 0,646	& 0,625	& \multicolumn{1}{l}{14,9}	& \multicolumn{1}{l}{35\%}	\\ %\cline{2-7} 
+	\multicolumn{1}{c}{\multirow{3}{*}{Four}} & 0,591	& 0,744	& 0,040	& 0,050	& \multicolumn{1}{l}{14,9}	& \multicolumn{1}{l}{35\%}	\\ %\cline{2-7} 
+	\multicolumn{1}{c}{}	& 0,591 & 0,743	& 0,040	& 0,050	& \multicolumn{1}{l}{14,9}	& \multicolumn{1}{l}{35\%}	\\ %\cline{2-7} 
 	% \rowcolor{gr}
-	\multicolumn{1}{c}{}	& 9,533	& 9,298	& 0,644	& 0,625	& \multicolumn{1}{l}{14,9}	& \multicolumn{1}{l}{35\%}	\\ \hline
+	\multicolumn{1}{c}{}	& 0,600 & 0,742	& 0,041	& 0,050	& \multicolumn{1}{l}{14,9}	& \multicolumn{1}{l}{35\%}	\\ \hline
 	\end{tabular}
 
 	\caption{Measurement Results }
