added some stuff

--- a/Reports/Report/Main.tex
+++ b/Reports/Report/Main.tex
@@ -18,7 +18,7 @@
 \newpage
 
 \tableofcontents 	% Table of Contents
-\listoffixmes 	%See LatexModule 
+% \listoffixmes 	%See LatexModule 
 
 \newpage
 
@@ -30,11 +30,11 @@
 \include{Test_Results}
 \include{Conclusion}
 
-\newpage	
-\appendix
+% \newpage	
+% \appendix
 
-\bibliographystyle{ieeetr}
-\bibliography{Referencer}
+% \bibliographystyle{ieeetr}
+% \bibliography{Referencer}
 
 
 \end{document}
