--- a/Reports/Report/Main.tex
+++ b/Reports/Report/Main.tex
@@ -31,11 +31,11 @@
 \include{Test_Results}
 \include{Conclusion}
 
-% \newpage	
-% \appendix
+\newpage	
+\appendix
 
-% \bibliographystyle{ieeetr}
-% \bibliography{Referencer}
+\bibliographystyle{ieeetr}
+\bibliography{Referencer}
 
 
 \end{document}
